--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
           </a>
         </h1>
         <p class="ug-info triangle-border left">
-          ReactJS.berlin was an early ReactJS usergroup run by 
-          <a href="http://bitcrowd.net" title="bitcrowd.net office">@bitcrowd</a>. 
-          We at bitcrowd are happy that the React community in berlin has now spawned so many usergroups 
-          and events that it does not need this regular meetup as support any longer.
+          ReactJS.berlin was an early React user group run by 
+          <a href="http://bitcrowd.net" title="bitcrowd.net office">bitcrowd</a>. 
+          We at bitcrowd are happy that the React community in Berlin has now expanded to so many user groups and 
+          events, that it does no longer need this regular meetup as support.
         </p>
       </div>
     </header>
@@ -59,41 +59,46 @@
     <main class="content clearfix">
       <article class="clearfix">
         <header class="clearfix center">
-          <h2>This ReactJS meetup group has been closed</h2>
+          <h2>This React meetup has been closed.</h2>
         </header>
         <div class="clearfix">
           <p>
-            When we started this meetup group in 2015, it was the first ReactJS focused meetup in Berlin and the comunity
-            was still young. Now, some years and many great meetups later, several other meetups, courses and events
-            around React have evolved. So we find that running just another one does not make sense.
+            When we started this event in 2015, it was the first React focused meetup in Berlin and the community 
+            was still young. 
+            Now, some years and many great meetups later, several other similar events around React have evolved. 
+            So we find that running another one just doesn’t make sense anymore.
           </p>
         </div>
       </article>  
       <section>
-        <h2>Looking for a React meetup, event or course?</h2>
+        <h2>Looking for React meetups?</h2>
         <p>
-          If you are looking for a React meetup, event or course, we suggest to have a look at the <a
-            href="https://www.meetup.com/topics/reactjs/de/berlin/?country=de&zipstatecity=berlin&state=&radius=40"
-            title="Berlin's finest JavaScript Usergroup">meetup.com groups</a>. Especially <a href="http://berlinjs.org/"
-            title="Berlin's finest JavaScript Usergroup">berlinjs.org</a> is a great starting point.
+          If you are still looking for React meetups, events or courses, we suggest taking a look at the
+          <a href="https://www.meetup.com/topics/reactjs/de/berlin/?country=de&zipstatecity=berlin&state=&radius=40"
+             title="Berlin's finest JavaScript Usergroup">meetup.com groups.</a>. 
+             Especially <a href="http://berlinjs.org/" title="Berlin's finest JavaScript Usergroup">berlinjs.org</a>
+             is a great place to start.
         </p>
       </section>
       <section>
-        <h2>Need a location for your event?</h2>
+        <h2>Hosting an event?</h2>
         <p>
           The <a href="http://bitcrowd.net" title="bitcrowd.net office">@bitcrowd</a> office has an event space that you
           can use for community events. It has a capacity of 90 people (seated) or 30 people (with desks for courses).
         </p>
       </section>
       <section>
-        <h2>Need help from React experts?</h2>
+        <h2>Looking for React experts?</h2>
         <p>
-          The people at <a href="http://bitcrowd.net" title="bitcrowd.net office">@bitcrowd</a> have created many ReactJS
-          applications for their clients over the past years. Just drop us and e-mail or call us and we see how we can
-          help your project.
+          We at <a href="http://bitcrowd.net" title="bitcrowd.net office">@bitcrowd</a> have created many ReactJS applications 
+          for our clients over the past few years. Just drop us an email or give us a call and we’ll see how we can help 
+          your project.
         </p>
+      </section>
+      <section>
         <div class="l-grid l-grid--wide" itemscope="" itemtype="http://schema.org/Organization">
           <div class="l-grid__item l-width--6-of-12@medium">
+            <h4>Get in touch</h4>
             <ul class="o-list-reset t-margin--bottom t-margin--top">
               <li class="t-margin--bottom" itemprop="email">
                 <a class="o-button o-button--brand-one o-flex" href="mailto:info@bitcrowd.net?Subject=Hallo bitcrowd!">
@@ -132,7 +137,7 @@
             </ul>
           </div>
           <div class="l-grid__item l-grid__item--bordered@medium l-width--6-of-12@medium t-text-align--center@small-only">
-            <h4>Come to see us!</h4>
+            <h4>Come see us</h4>
             <span itemprop="name">bitcrowd GmbH.</span>
             <address class="t-margin--bottom" itemprop="address" itemtype="http://schema.org/PostalAddress">
               <span itemprop="streetAddress">Oranienstr. 6</span>
@@ -177,7 +182,7 @@
       </section>
     </main>
 
-    <footer class="content" role="complimentary">
+    <footer class="content">
       <section>
         <div class="clearfix one-col">
           <div>
