Fix contact section

--- a/index.html
+++ b/index.html
@@ -102,36 +102,23 @@
             <ul class="o-list-reset t-margin--bottom t-margin--top">
               <li class="t-margin--bottom" itemprop="email">
                 <a class="o-button o-button--brand-one o-flex" href="mailto:info@bitcrowd.net?Subject=Hallo bitcrowd!">
-                  <svg class="o-icon o-icon--medium o-button__icon" role="presentation">
-                    <use
-                      xlink:href="/assets/icons-6340dd98fa6f1b96aa59bc2fa26fa333888b737354909e31a45c9ab8f529ca2a.svg#envelope">
-                    </use>
-                  </svg>
                   <span class="o-flex__primary">
-                    info@bitcrowd.net
+                   Email: info@bitcrowd.net
                   </span>
                 </a>
               </li>
               <li class="t-margin--bottom" itemprop="twitter">
                 <a class="o-button o-button--brand-four o-flex" href="https://twitter.com/bitcrowd">
-                  <svg class="o-icon o-icon--medium o-button__icon" role="presentation">
-                    <use
-                      xlink:href="/assets/icons-6340dd98fa6f1b96aa59bc2fa26fa333888b737354909e31a45c9ab8f529ca2a.svg#twitter">
-                    </use>
-                  </svg>
                   <span class="o-flex__primary">
-                    @bitcrowd
+                    Twitter: @bitcrowd
                   </span>
                 </a>
               </li>
               <li class="t-margin--bottom" itemprop="telephone">
                 <a class="o-button o-button--brand-six o-flex" href="tel:493055577597">
-                  <svg class="o-icon o-icon--medium o-button__icon" role="presentation">
-                    <use
-                      xlink:href="/assets/icons-6340dd98fa6f1b96aa59bc2fa26fa333888b737354909e31a45c9ab8f529ca2a.svg#telephone">
-                    </use>
-                  </svg>
-                  <span class="o-flex__primary"><span class="o-visuallyhidden">Call us on </span>+49 30 555 77 597</span>
+                  <span class="o-flex__primary">
+                    +49 30 555 77 597
+                  </span>
                 </a>
               </li>
             </ul>
