Remove utility classes from bitcrowd styles

--- a/index.html
+++ b/index.html
@@ -96,45 +96,43 @@
         </div>
       </div>
       <section>
-        <div class="l-grid l-grid--wide" itemscope="" itemtype="http://schema.org/Organization">
-          <div class="l-grid__item l-width--6-of-12@medium">
+        <div itemscope="" itemtype="http://schema.org/Organization">
+          <div>
             <h3>Get in touch</h3>
-            <ul class="o-list-reset t-margin--bottom t-margin--top">
-              <li class="t-margin--bottom" itemprop="email">
-                <a class="o-button o-button--brand-one o-flex" href="mailto:info@bitcrowd.net?Subject=Hallo bitcrowd!">
-                  <span class="o-flex__primary">
+            <ul>
+              <li itemprop="email">
+                <a href="mailto:info@bitcrowd.net?Subject=Hallo bitcrowd!">
+                  <span>
                    Email: info@bitcrowd.net
                   </span>
                 </a>
               </li>
-              <li class="t-margin--bottom" itemprop="twitter">
-                <a class="o-button o-button--brand-four o-flex" href="https://twitter.com/bitcrowd">
-                  <span class="o-flex__primary">
+              <li itemprop="twitter">
+                <a href="https://twitter.com/bitcrowd">
+                  <span>
                     Twitter: @bitcrowd
                   </span>
                 </a>
               </li>
-              <li class="t-margin--bottom" itemprop="telephone">
-                <a class="o-button o-button--brand-six o-flex" href="tel:493055577597">
-                  <span class="o-flex__primary">
+              <li itemprop="telephone">
+                <a href="tel:493055577597">
+                  <span>
                     +49 30 555 77 597
                   </span>
                 </a>
               </li>
             </ul>
           </div>
-          <div class="l-grid__item l-grid__item--bordered@medium l-width--6-of-12@medium t-text-align--center@small-only">
-            <h3>Come see us</h3>
+          <div>
             <span itemprop="name">bitcrowd GmbH.</span>
-            <address class="t-margin--bottom" itemprop="address" itemtype="http://schema.org/PostalAddress">
+            <address itemprop="address" itemtype="http://schema.org/PostalAddress">
               <span itemprop="streetAddress">Oranienstr. 6</span>
               <br>
               <span itemprop="postalCode">10997</span>
               <span itemprop="addressLocality">Berlin<br>Germany</span>
             </address>
-            <a class="o-link o-link--alt"
-              href="https://www.google.de/maps/place/Oranienstra%C3%9Fe+6,+10997+Berlin/@52.4998919,13.4244531,18z/data=!3m1!4b1!4m5!3m4!1s0x47a84e350a669333:0x3dc79e96d74bd57b!8m2!3d52.4998919!4d13.425056">Open
-              in google maps</a>
+            <a href="https://www.google.de/maps/place/Oranienstra%C3%9Fe+6,+10997+Berlin/@52.4998919,13.4244531,18z/data=!3m1!4b1!4m5!3m4!1s0x47a84e350a669333:0x3dc79e96d74bd57b!8m2!3d52.4998919!4d13.425056">
+              Open in google maps</a>
           </div>
         </div>
       </section>
