Add layout classes back

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </header>
 
     <main class="content clearfix">
-      <article class="clearfix">
+      <article class="clearfix one-col">
         <header class="clearfix center">
           <h1>This React meetup has been closed.</h1>
         </header>
@@ -95,9 +95,8 @@
           </p>
         </div>
       </div>
-      <section>
-        <div itemscope="" itemtype="http://schema.org/Organization">
-          <div>
+      <section class="clearfix three-cols">
+          <div itemscope="" itemtype="http://schema.org/Organization">
             <h3>Get in touch</h3>
             <ul>
               <li itemprop="email">
