Add gray background for the 3 column layout

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
       </article>
       <div class="clearfix three-cols">  
-        <div>
+        <div class="speaker">
           <h2 class="header-style">Looking for React meetups?</h2>
           <p>
             If you are still looking for React meetups, events or courses, we suggest taking a look at the
@@ -79,15 +79,15 @@
               is a great place to start.
           </p>
         </div>
-        <div>
+        <div class="speaker">
           <h2 class="header-style">Hosting an event?</h2>
           <p>
             The <a href="http://bitcrowd.net" title="bitcrowd.net office">@bitcrowd</a> office has an event space that you
             can use for community events. It has a capacity of 90 people (seated) or 30 people (with desks for courses).
           </p>
         </div>
-        <div>
-          <h2 class="header-style">Talk to our React experts</h2>
+        <div class="speaker">
+          <h2 class="header-style">Meet our React experts</h2>
           <p>
             We at <a href="http://bitcrowd.net" title="bitcrowd.net office">@bitcrowd</a> have created many ReactJS applications 
             for our clients over the past few years. Just drop us an email or give us a call and we’ll see how we can help 
@@ -123,6 +123,7 @@
             </ul>
           </div>
           <div>
+            <h3>Come visit us at:</h3>
             <span itemprop="name">bitcrowd GmbH.</span>
             <address itemprop="address" itemtype="http://schema.org/PostalAddress">
               <span itemprop="streetAddress">Oranienstr. 6</span>
@@ -133,7 +134,6 @@
             <a href="https://www.google.de/maps/place/Oranienstra%C3%9Fe+6,+10997+Berlin/@52.4998919,13.4244531,18z/data=!3m1!4b1!4m5!3m4!1s0x47a84e350a669333:0x3dc79e96d74bd57b!8m2!3d52.4998919!4d13.425056">
               Open in google maps</a>
           </div>
-        </div>
       </section>
     </main>
 
