--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <main class="content clearfix">
       <article class="clearfix one-col">
         <header class="clearfix center">
-          <h1>This React meetup has been closed.</h1>
+          <h1>ReactJS Berlin meetup has been closed.</h1>
         </header>
         <div class="clearfix">
           <p>
@@ -70,7 +70,7 @@
       </article>
       <div class="clearfix three-cols">  
         <div class="speaker">
-          <h2 class="header-style">Looking for React meetups?</h2>
+          <h2>Looking for React meetups?</h2>
           <p>
             If you are still looking for React meetups, events or courses, we suggest taking a look at the
             <a href="https://www.meetup.com/topics/reactjs/de/berlin/?country=de&zipstatecity=berlin&state=&radius=40"
@@ -80,14 +80,14 @@
           </p>
         </div>
         <div class="speaker">
-          <h2 class="header-style">Hosting an event?</h2>
+          <h2>Hosting an event?</h2>
           <p>
             The <a href="http://bitcrowd.net" title="bitcrowd.net office">@bitcrowd</a> office has an event space that you
             can use for community events. It has a capacity of 90 people (seated) or 30 people (with desks for courses).
           </p>
         </div>
         <div class="speaker">
-          <h2 class="header-style">Meet our React experts</h2>
+          <h2>Meet our React experts</h2>
           <p>
             We at <a href="http://bitcrowd.net" title="bitcrowd.net office">@bitcrowd</a> have created many ReactJS applications 
             for our clients over the past few years. Just drop us an email or give us a call and we’ll see how we can help 
