--- a/index.html
+++ b/index.html
@@ -102,14 +102,14 @@
               <li itemprop="email">
                 <a href="mailto:info@bitcrowd.net?Subject=Hallo bitcrowd!">
                   <span>
-                   Email: info@bitcrowd.net
+                   info@bitcrowd.net
                   </span>
                 </a>
               </li>
               <li itemprop="twitter">
                 <a href="https://twitter.com/bitcrowd">
                   <span>
-                    Twitter: @bitcrowd
+                    @bitcrowd
                   </span>
                 </a>
               </li>
