Remove `@` from text link

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <div class="speaker">
           <h2>Hosting an event?</h2>
           <p>
-            The <a href="http://bitcrowd.net" title="bitcrowd.net office">@bitcrowd</a> office has an event space that you
+            The <a href="http://bitcrowd.net" title="bitcrowd.net office">bitcrowd</a> office has an event space that you
             can use for community events. It has a capacity of 90 people (seated) or 30 people (with desks for courses).
           </p>
         </div>
