Add Supporters and The team sections back

--- a/index.html
+++ b/index.html
@@ -134,6 +134,23 @@
             <a href="https://www.google.de/maps/place/Oranienstra%C3%9Fe+6,+10997+Berlin/@52.4998919,13.4244531,18z/data=!3m1!4b1!4m5!3m4!1s0x47a84e350a669333:0x3dc79e96d74bd57b!8m2!3d52.4998919!4d13.425056">
               Open in google maps</a>
           </div>
+          <div>
+            <h3>Supporters</h3>
+            <p>
+              Our Meetups are hosted by <a href="http://bitcrowd.net">bitcrowd.net</a>.
+              The template for this page is the gloriuos <a href="http://berlinjs.org/" title="Berlin's finest JavaScript Usergroup">berlinjs.org page</a> with kind permission of <a href="http://www.twitter.com/rmehner" title="Follow Robin on Twitter">Robin Mehner</a>.
+            </p>
+          </div>
+          <div>
+            <h3>The team</h3>
+            <p>
+              ReactJS.berlin was organized by
+              <a href="http://www.twitter.com/chris_bitcrowd" title="Follow Chris on Twitter">Christoph Beck</a>
+              from
+              <a href="http://www.twitter.com/bitcrowd" title="Follow bitcrowd on Twitter">@bitcrowd</a>. Interested in joining the organizers team? Drop us a line on twitter or meetup :)
+              Design by <a href="http://www.twitter.com/m_besser" title="Follow Matti on Twitter">Matti Besser</a> &amp; <a href="http://www.twitter.com/plankton" title="Follow Darren on Twitter">Darren Cadwallader</a>.
+            </p>
+          </div>
       </section>
     </main>
 
