Remove <span>; Remove line breaks

--- a/index.html
+++ b/index.html
@@ -101,23 +101,17 @@
             <ul>
               <li itemprop="email">
                 <a href="mailto:info@bitcrowd.net?Subject=Hallo bitcrowd!">
-                  <span>
                    info@bitcrowd.net
-                  </span>
                 </a>
               </li>
               <li itemprop="twitter">
                 <a href="https://twitter.com/bitcrowd">
-                  <span>
                     @bitcrowd
-                  </span>
                 </a>
               </li>
               <li itemprop="telephone">
                 <a href="tel:493055577597">
-                  <span>
                     +49 30 555 77 597
-                  </span>
                 </a>
               </li>
             </ul>
@@ -145,10 +139,7 @@
             <h3>The team</h3>
             <p>
               ReactJS.berlin was organized by
-              <a href="http://www.twitter.com/chris_bitcrowd" title="Follow Chris on Twitter">Christoph Beck</a>
-              from
-              <a href="http://www.twitter.com/bitcrowd" title="Follow bitcrowd on Twitter">@bitcrowd</a>. Interested in joining the organizers team? Drop us a line on twitter or meetup :)
-              Design by <a href="http://www.twitter.com/m_besser" title="Follow Matti on Twitter">Matti Besser</a> &amp; <a href="http://www.twitter.com/plankton" title="Follow Darren on Twitter">Darren Cadwallader</a>.
+              <a href="http://www.twitter.com/chris_bitcrowd" title="Follow Chris on Twitter">Christoph Beck</a> from <a href="http://www.twitter.com/bitcrowd" title="Follow bitcrowd on Twitter">@bitcrowd</a>. Interested in joining the organizers team? Drop us a line on twitter or meetup :) Design by <a href="http://www.twitter.com/m_besser" title="Follow Matti on Twitter">Matti Besser</a> &amp; <a href="http://www.twitter.com/plankton" title="Follow Darren on Twitter">Darren Cadwallader</a>.
             </p>
           </div>
       </section>
@@ -161,8 +152,7 @@
             <h2>Past Meetups</h2>
             <ul>
               <li>
-                <a href='index_20180804.html'>04.08.2018 beginners workshop by</a> <a
-                  href="https://github.com/manjula91">Manjula Dube</a>
+                <a href='index_20180804.html'>04.08.2018 beginners workshop by</a><a href="https://github.com/manjula91">Manjula Dube</a>
               </li>
               <li>
                 <a href='index_20170918.html'>18.09.2017 on Ladda, MobX and Inversify</a>
@@ -174,8 +164,7 @@
                 <a href='index_20170320.html'>20.03.2017 on Animations, ClojureScript and and Mimstris</a>
               </li>
               <li>
-                <a href='index_20170123.html'>23.01.2017 on Angular1 to React migration and code splitting with
-                  webpack</a>
+                <a href='index_20170123.html'>23.01.2017 on Angular1 to React migration and code splitting with webpack</a>
               </li>
               <li>
                 <a href='index_20161212.html'>12.12.2016 on Flowtype, Deploying React and Redux-based React Native</a>
@@ -184,21 +173,18 @@
           </div>
         </div>
       </section>
-      <section>
-        <div class="clearfix one-col">
-          <div>
-            <h2>Code of Conduct</h2>
-            <p>
-              Our goal is to have an awesome, inclusive and safe community meetup where people meet,
-              hang out together, chat, listen to talks, exchange ideas and make new friends.
-              Any harmful or discriminating behaviour will not be tolerated and results
-              in the offending person being expelled from the meetup.
-            </p>
-            <p>
-              For details on what kinds of behaviour are not tolerated and consequences for violating these rules, we
-              refer to the <a href="http://rubyberlin.github.io/code-of-conduct">Berlin Code of Conduct</a>.
-            </p>
-          </div>
+      <section class="clearfix one-col">
+        <div>
+          <h2>Code of Conduct</h2>
+          <p>
+            Our goal is to have an awesome, inclusive and safe community meetup where people meet,
+            hang out together, chat, listen to talks, exchange ideas and make new friends.
+            Any harmful or discriminating behaviour will not be tolerated and results
+            in the offending person being expelled from the meetup.
+          </p>
+          <p>
+            For details on what kinds of behaviour are not tolerated and consequences for violating these rules, we prefer to the <a href="http://rubyberlin.github.io/code-of-conduct">Berlin Code of Conduct</a>.
+          </p>
         </div>
       </section>
       <section>
