Remove title attribute

--- a/index.html
+++ b/index.html
@@ -46,12 +46,9 @@
       <a href="/">
         <img alt="ReactJS.berlin" src="img/react-berlin-logo.svg" class="logo" />
       </a>
-      <p class="ug-info triangle-border left">
-        ReactJS.berlin was an early React user group run by
-        <a href="http://bitcrowd.net" title="bitcrowd.net office">bitcrowd</a>.
-        We at bitcrowd are happy that the React community in Berlin has now expanded to so many user groups and
-        events, that it does no longer need this regular meetup as support.
-      </p>
+      <p class="ug-info triangle-border left"> ReactJS.berlin was an early React user group run by
+        <a href="http://bitcrowd.net">Bitcrowd</a>. We at bitcrowd are happy that the React community in Berlin has 
+        now expanded to so many user groups and events, that it does no longer need this regular meetup as support.</p>
     </div>
   </header>
 
@@ -61,12 +58,9 @@
         <h1>ReactJS Berlin meetup has been closed.</h1>
       </header>
       <div class="clearfix">
-        <p>
-          When we started this event in 2015, it was the first React focused meetup in Berlin and the community
-          was still young.
-          Now, some years and many great meetups later, several other similar events around React have evolved.
-          So we find that running another one just doesn’t make sense anymore.
-        </p>
+        <p>When we started this event in 2015, it was the first React focused meetup in Berlin and the community
+          was still young. Now, some years and many great meetups later, several other similar events around React 
+          have evolved. So we find that running another one just doesn’t make sense anymore.</p>
       </div>
     </article>
     <div class="clearfix three-cols">
@@ -159,56 +153,48 @@
   </main>
 
   <footer class="content">
-    <section>
-      <div class="clearfix one-col">
-        <div>
-          <h2>Past Meetups</h2>
-          <ul>
-            <li>
-              <a href='index_20180804.html'>04.08.2018 beginners workshop by</a><a
-                href="https://github.com/manjula91">Manjula Dube</a>
-            </li>
-            <li>
-              <a href='index_20170918.html'>18.09.2017 on Ladda, MobX and Inversify</a>
-            </li>
-            <li>
-              <a href='index_20170626.html'>26.06.2017 on GraphQL, React Storybook and Mantaining UI consistency</a>
-            </li>
-            <li>
-              <a href='index_20170320.html'>20.03.2017 on Animations, ClojureScript and and Mimstris</a>
-            </li>
-            <li>
-              <a href='index_20170123.html'>23.01.2017 on Angular1 to React migration and code splitting with
-                webpack</a>
-            </li>
-            <li>
-              <a href='index_20161212.html'>12.12.2016 on Flowtype, Deploying React and Redux-based React Native</a>
-            </li>
-          </ul>
-        </div>
+    <section class="clearfix one-col">
+      <div>
+        <h2>Past Meetups</h2>
+        <ul>
+          <li>
+            <a href='index_20180804.html'>04.08.2018 beginners workshop by</a> <a href="https://github.com/manjula91">Manjula Dube</a>
+          </li>
+          <li>
+            <a href='index_20170918.html'>18.09.2017 on Ladda, MobX and Inversify</a>
+          </li>
+          <li>
+            <a href='index_20170626.html'>26.06.2017 on GraphQL, React Storybook and Mantaining UI consistency</a>
+          </li>
+          <li>
+            <a href='index_20170320.html'>20.03.2017 on Animations, ClojureScript and and Mimstris</a>
+          </li>
+          <li>
+            <a href='index_20170123.html'>23.01.2017 on Angular1 to React migration and code splitting with
+              webpack</a>
+          </li>
+          <li>
+            <a href='index_20161212.html'>12.12.2016 on Flowtype, Deploying React and Redux-based React Native</a>
+          </li>
+        </ul>
       </div>
     </section>
     <section class="clearfix one-col">
       <div>
         <h2>Code of Conduct</h2>
-        <p>
-          Our goal is to have an awesome, inclusive and safe community meetup where people meet,
+        <p>Our goal is to have an awesome, inclusive and safe community meetup where people meet,
           hang out together, chat, listen to talks, exchange ideas and make new friends.
           Any harmful or discriminating behaviour will not be tolerated and results
-          in the offending person being expelled from the meetup.
-        </p>
-        <p>
-          For details on what kinds of behaviour are not tolerated and consequences for violating these rules, we prefer
-          to the <a href="http://rubyberlin.github.io/code-of-conduct">Berlin Code of Conduct</a>.
-        </p>
+          in the offending person being expelled from the meetup.</p>
+        <p>For details on what kinds of behaviour are not tolerated and consequences for violating these rules, we prefer
+          to the <a href="http://rubyberlin.github.io/code-of-conduct">Berlin Code of Conduct</a>.</p>
       </div>
     </section>
-    <section>
-      <div class="clearfix one-col">
+    <section class="clearfix one-col">
+      <div>
         <div>
           <h2>Imprint, privacy policy and legal information</h2>
-          <p>
-            This site is run by
+          <p> This site is run by
             <a href="http://bitcrowd.net" title="bitcrowd.net software development for startups">bitcrowd</a> -
             please find <a href="http://bitcrowd.net/legal"
               title="bitcrowd.net software development legal information">imprint, privacy and other legal information
