--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>ReactJS.berlin &mdash; Berlin's ReactJS Usergroup</title>
+  <title>ReactJS.berlin &mdash; Berlin’s ReactJS Usergroup</title>
   <meta name="description"
     content="ReactJS.berlin is was an early usergroup focused on ReactJS and related
       topics. We at bitcrowd are happy that the React community in berlin has spawned so many usergroups and events that it does not need this meetup as support any longer.">
@@ -58,7 +58,7 @@
         <h1>ReactJS Berlin meetup has been closed.</h1>
       </header>
       <div class="clearfix">
-        <p>When we started this event in 2015, it was the first React focused meetup in Berlin and the community
+        <p>When we started this event in 2015, it was the first React-focused meetup in Berlin and the community
           was still young. Now, some years and many great meetups later, several other similar events around React 
           have evolved. So we find that running another one just doesn’t make sense anymore.</p>
       </div>
@@ -70,8 +70,9 @@
         </p>  
         <p>You're still looking for React meetups and events in Berlin?</p>
         <p>
-          Take a look at <a href="">meetup.com</a>, where you'll find many meetups happening around Berlin. 
-          <a href="">berlinjs.org</a> is an especially great place to start.
+          Take a look at <a href="https://www.meetup.com/topics/reactjs/de/berlin/?country=de&zipstatecity=berlin&state=&radius=40">
+          meetup.com</a>, where you'll find many meetups happening around Berlin. 
+          <a href="https://berlinjs.org/">berlinjs.org</a> is an especially great place to start.
         </p>
       </div>
       <div class="speaker">
@@ -124,25 +125,18 @@
           <span itemprop="postalCode">10997</span>
           <span itemprop="addressLocality">Berlin<br>Germany</span>
         </address>
-        <a
-          href="https://www.google.de/maps/place/Oranienstra%C3%9Fe+6,+10997+Berlin/@52.4998919,13.4244531,18z/data=!3m1!4b1!4m5!3m4!1s0x47a84e350a669333:0x3dc79e96d74bd57b!8m2!3d52.4998919!4d13.425056">
+        <a href="https://www.google.de/maps/place/Oranienstra%C3%9Fe+6,+10997+Berlin/@52.4998919,13.4244531,18z/data=!3m1!4b1!4m5!3m4!1s0x47a84e350a669333:0x3dc79e96d74bd57b!8m2!3d52.4998919!4d13.425056">
           Open in google maps</a>
       </div>
       <div>
-        <!-- <div>
-          <h3>Supporters</h3>
-        </div> -->
         <div>
           <h3>The team</h3>
-          <p>
-            ReactJS.berlin was organized by
-            <a href="http://www.twitter.com/chris_bitcrowd" title="Follow Chris on Twitter">Christoph Beck</a> from <a
-              href="http://www.twitter.com/bitcrowd" title="Follow bitcrowd on Twitter">@bitcrowd</a>. Interested in
-            joining the organizers team? Drop us a line on twitter or meetup :) Design by <a
+          <p>ReactJS.berlin was organized by
+            <a href="http://www.twitter.com/chris_bitcrowd" title="Follow Chris on Twitter">Christoph Beck</a> from 
+            <a href="http://www.twitter.com/bitcrowd" title="Follow bitcrowd on Twitter">@bitcrowd</a>. Design by <a
               href="http://www.twitter.com/m_besser" title="Follow Matti on Twitter">Matti Besser</a> &amp; <a
               href="http://www.twitter.com/plankton" title="Follow Darren on Twitter">Darren Cadwallader</a>.
-            <p>
-              The template for this page is the glorious <a href="http://berlinjs.org/"
+            <p>The template for this page is the glorious <a href="http://berlinjs.org/"
                 title="Berlin's finest JavaScript Usergroup">berlinjs.org page</a>, with kind permission from <a
                 href="http://www.twitter.com/rmehner" title="Follow Robin on Twitter">Robin Mehner</a>.
             </p>
