Fix prefer/ refer typo

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
           hang out together, chat, listen to talks, exchange ideas and make new friends.
           Any harmful or discriminating behaviour will not be tolerated and results
           in the offending person being expelled from the meetup.</p>
-        <p>For details on what kinds of behaviour are not tolerated and consequences for violating these rules, we prefer
+        <p>For details on what kinds of behaviour are not tolerated and consequences for violating these rules, we refer
           to the <a href="http://rubyberlin.github.io/code-of-conduct">Berlin Code of Conduct</a>.</p>
       </div>
     </section>
